fix: Remove sort from test